@@ -3,6 +3,9 @@ Released 2.3.11 2009-11-xx
 
 Changes since 2.3.10:
 
+Lib/
+* Fixed LDAP URL parsing with four ? but no real extensions
+
 Modules/
 * Make use of LDAP_OPT_X_TLS_NEWCTX only if available in
   OpenLDAP libs used for the build
